# taskpp

./: .clang-format  .gitignore  .gitlab-ci.yml  CONTRIBUTING  Dockerfile  Doxyfile  README.md  TESTING  compile_flags.txt  meson.build  meson_options.txt
doc/: config.txt
examples/: config
scripts/: coverage.sh  doc.sh  tidy.py
src/: app.cpp  app.hpp  config.cpp  config.hpp  config.test.cpp  environment.cpp  environment.hpp  environment.test.cpp  exceptions.hpp  exceptions.test.cpp  library.cpp  library.hpp  logging.cpp  logging.hpp  logging.test.cpp  macros.hpp  main.cpp  main.test.cpp  meson.build  string.cpp  string.hpp  string.test.cpp
src/iface/: iface.hpp  ncurses.cpp  ncurses.hpp  os.cpp  os.hpp
src/mocks/: ncurses.hpp  os.hpp
src/stubs/: meson.build  ncurses.cpp
src/tui/: bar.cpp  bar.hpp  board.cpp  board.hpp  color.cpp  color.hpp  color.test.cpp  meson.build  screen.cpp  screen.hpp  terminal.cpp  terminal.hpp  terminal.test.cpp  window.cpp  window.hpp  window.test.cpp
